--- a/sass/partials/_classes.scss
+++ b/sass/partials/_classes.scss
@@ -3,21 +3,21 @@
 
 
 .heading-title{
-    padding-top: $padding-section-title;
+    // padding-top: $padding-section-title;
     color: $heading-color;
     font-weight: $font-medium !important;
 }
 
 .heading-sub-title{
     color: $title-sub-color;
-    padding-top: $padding-normal;
+    // padding-top: $padding-normal;
     padding-bottom: $padding-normal;
 }
 .heading-u-line{
     width: 4.5rem;
     height: 0.188rem;
     background-color: $primary-color;
-    margin-top: $margin-normal;
+    // margin-top: $margin-normal;
 }
 
 .see-more{
