--- a/sass/style.scss
+++ b/sass/style.scss
@@ -353,7 +353,7 @@ nav{ height: 5rem !important; background-color: $body-color; position: fixed; z-
             font-size: 85% !important;
         }
         a{
-            font-size: 82%;
+            font-size: 82% !important;
         }
 
         .button .button-light{
@@ -409,7 +409,7 @@ nav{ height: 5rem !important; background-color: $body-color; position: fixed; z-
             font-size: 100% !important;
         }
         a{
-            font-size: 92%;
+            font-size: 92% !important;
         }
         
     }
