shopping page responsived & added

--- a/sass/pages/_shopping.scss
+++ b/sass/pages/_shopping.scss
@@ -142,6 +142,7 @@
 #recomended-products{
     background-color: $bg-color;
     padding-bottom: $padding-section;
+    margin-top: $space-sec-md;
     
 }
 // Recomended products css end
