sign and index file some update

--- a/sass/pages/_signup.scss
+++ b/sass/pages/_signup.scss
@@ -10,7 +10,7 @@
     .signup-txt{
         height: 100vh;
         color: $title-color-light;
-        margin-left: 20%;
+        // margin-left: 10%;
         img{
             position: absolute;
             top: 2rem
