--- a/sass/style.scss
+++ b/sass/style.scss
@@ -94,14 +94,14 @@ nav{
                     }
                 }
 
-                .dir-categories{
-                    .dir-btn{
-                        background: linear-gradient(0deg, rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25));
-                        a{
-                            color: $title-color-light
-                        }
-                    }
-                }
+                // .dir-categories{
+                //     .dir-btn{
+                //         background: linear-gradient(0deg, rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25));
+                //         a{
+                //             color: $title-color-light
+                //         }
+                //     }
+                // }
     
             }
 
@@ -495,13 +495,17 @@ nav{
             transition: .3s;
             margin-left: -2rem;
             margin-top: 3rem;
-            &:hover{
-                .list-sub-menu{
-                    display: block;
-                }
-            }
+            // &:hover{
+            //     .list-sub-menu{
+            //         display: block;
+            //     }
+            // }
             li{
-                // margin-right: .5rem;
+                &:hover{
+                    .list-sub-menu{
+                            display: block;
+                    }
+                }
             }
             .list-sub-menu{
                 // @extend .box-shadow;
@@ -983,13 +987,21 @@ nav{
             
         .list-main-menu{
             
-            &:hover{
-                .list-sub-menu{
-                    display: flex !important;
+            // &:hover{
+            //     .list-sub-menu{
+            //         display: flex !important;
+            //     }
+            // }
+            li{
+                &:hover{
+                    ul{
+                            display: flex !important;
+                    }
                 }
             }
             
             .list-sub-menu{
+                
                 margin-left: -40rem;
                 width: 58.2rem ;
                 display: none !important;
